--- a/home/dot_markdownlint-cli2.jsonc
+++ b/home/dot_markdownlint-cli2.jsonc
@@ -12,6 +12,9 @@
         "MD024": {
             "siblings_only": true
         },
+        "MD029": {
+            "style": "ordered"
+        },
         "MD033": false
     }
 }
