--- a/home/dot_markdownlint-cli2.jsonc
+++ b/home/dot_markdownlint-cli2.jsonc
@@ -15,6 +15,7 @@
         "MD029": {
             "style": "ordered"
         },
-        "MD033": false
+        "MD033": false,
+        "MD036": false
     }
 }
